separating user profile from user
